frontend work html & css

--- a/Frontend/my-app/src/rating.html
+++ b/Frontend/my-app/src/rating.html
@@ -5,6 +5,26 @@
 </head>
 <body>
 <h1 class="page-title">Ratings</h1>
+
+<!--Navbar-->
+<nav class="nav">
+  <div class="nav-item logo">
+    <a href="homepage.html">
+      <img src="logo.png" alt="Logo" class="logo-img">
+    </a>
+  </div>
+  <div class="nav-item profile">
+    <div class="dropdown">
+      <img src="profile-icon.png" alt="Profile" class="profile-img" id="profileIcon">
+      <ul class="dropdown-menu" id="dropdownMenu">
+        <li><a href="profilepage.html">Profile</a></li>
+        <li><a href="historypage.html">History</a></li>
+        <li><a href="mylistings.html">Postings</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
 <!--Box on top-->
 <div class="container">
   <div class="rating-box">
@@ -59,11 +79,7 @@
   </div>
 </div>
 
-<!--navbar-->
-<nav class="nav">
-  <a href="#" class="nav-item">Home</a>
-  <a href="#" class="nav-item">Saved Items</a>
-  <a href="#" class="nav-item">Profile</a>
-</nav>
+<script src="navbar.js"></script>
+
 </body>
 </html>
