--- a/Frontend/my-app/src/listing.html
+++ b/Frontend/my-app/src/listing.html
@@ -5,6 +5,26 @@
 </head>
 <body>
 
+  <!--navbar-->
+  <nav class="nav">
+    <div class="nav-item logo">
+      <a href="homepage.html">
+        <img src="logo.png" alt="Logo" class="logo-img">
+      </a>
+    </div>
+    <div class="nav-item profile">
+      <div class="dropdown">
+        <img src="profile-icon.png" alt="Profile" class="profile-img" id="profileIcon">
+        <ul class="dropdown-menu" id="dropdownMenu">
+          <li><a href="profilepage.html">Profile</a></li>
+          <li><a href="historypage.html">History</a></li>
+          <li><a href="mylistings.html">Postings</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  
+  
 <div class="container">
   <form>
     <div class="form-group">
@@ -31,7 +51,7 @@
     </div>
 
     <div class="form-group">
-        <label class="required">Service Categories (up to 5):</label>
+        <label class="required">Service Categories (up to 3):</label>
         <select id="categories" multiple size="5"> 
           <option value="#">Beauty & Personal Care</option>
           <option value="#">Entertainment</option>
@@ -46,28 +66,31 @@
       </div>
 
       <!--Q4-->
+      <div class="form-group">
+        <label class="required">Short Description (up to 200 characters)</label>
+        <textarea rows="4" maxlength="200" placeholder="Brief description that will be displayed when people first view your listing..."></textarea>
+      </div>
+
+
+      <!--Q5-->
     <div class="form-group">
-      <label class="required">Description:</label>
-      <textarea rows="4"></textarea>
+      <label class="required"> Long Description:</label>
+      <textarea rows="4" placeholder="Ex. What is it, prices, payment methods, where, links to calendars... "></textarea>
     </div>
 
-    <!--Q5-->
+
+    <!--Q6-->
     <div class="form-group">
       <label class="required">Location:</label>
       <input type="text">
     </div>
 
-    <!--Q6-->
-    <div class="form-group">
-      <label class="required">Price:</label>
-      <input type="text">
-    </div>
-
     <!--Q7-->
     <div class="form-group">
-      <label class="required">Payment Methods:</label>
-      <input type="text">
+      <label class="required">Price(s):</label>
+      <textarea rows="1" placeholder= "Ex. 'Small: $10 Large: $20'"></textarea>
     </div>
+
 
     <!--last two buttons-->
     <div class="btn-group">
@@ -77,11 +100,9 @@
   </form>
 </div>
 
-<!--navbar-->
-<nav class="nav">
-  <a href="#" class="nav-item" >Home</a>
-  <a href="#" class="nav-item">Saved Items </a>
-  <a href="#" class="nav-item">Profile</a>
-</nav>
+<script src="navbar.js"></script>
+<script src="listing.js"></script>
+
+
 </body>
 </html>
