Additions to homepage for more full screen

--- a/Frontend/my-app/src/homepage.html
+++ b/Frontend/my-app/src/homepage.html
@@ -66,6 +66,14 @@
             </div>
 
             <div class="card">
+              <div class="card-image" style="background-image: url('./listingimages/thriftlogo.jpg');"></div>
+              <div class="card-text-user"> @daisythrift </div>
+              <div class="card-text"> Daisy's Vintage </div>
+              <div class="card-text-small"> Selling cool clothes straight from my wardrobe. Check out my page for cool and pretty pieces. Contact to negotiate prices or any inquiries! </div>
+              <span class="service-icon"><br> 👕 </span>
+          </div>
+
+            <div class="card">
                 <div class="card-image" style="background-image: url('./listingimages/apple.jpg');"></div>
                 <div class="card-text-user"> @thatguy92 </div>
                 <div class="card-text"> Rizz Lessons 101 😏 </div>
@@ -82,7 +90,16 @@
                     <span class="service-icon"><br> 🪞 </span>
                 </div>
 
-            </a>            
+            </a>
+            
+            <div class="card">
+              <div class="card-image" style="background-image: url('./listingimages/textbooks.jpg');"></div>
+              <div class="card-text-user"> @usedbooks_alex </div>
+              <div class="card-text"> Alex's Textbooks </div>
+              <div class="card-text-small"> Putting up my old textbooks for sale for anyone that needs it at a cheaper price! Contact me for discounts or to negotiate. </div>
+              <span class="service-icon"><br> 👕 </span>
+          </div>
+
         </div>
     </div>
 
