--- a/Frontend/my-app/src/pielisting.html
+++ b/Frontend/my-app/src/pielisting.html
@@ -19,6 +19,7 @@
         <li><a href="profilepage.html">Profile</a></li>
         <li><a href="historypage.html">History</a></li>
         <li><a href="mylistings.html">Postings</a></li>
+        <li><a href="">Log Out</a></li>
       </ul>
     </div>
   </div>
@@ -26,7 +27,7 @@
 
 <!--Bookmark Section-->
 <div class="bookmark-section">
-    <button id="bookmarkButton" class="btn-listing" data-tooltip="Save"> 💖 Save </button>
+    <button id="bookmarkButton" class="btn-listing" data-tooltip="Save"> ✓ Save </button>
 </div>
 
 <!--Header-->
