--- a/Frontend/my-app/src/homepage.html
+++ b/Frontend/my-app/src/homepage.html
@@ -18,6 +18,7 @@
               <li><a href="profilepage.html">Profile</a></li>
               <li><a href="historypage.html">History</a></li>
               <li><a href="mylistings.html">Postings</a></li>
+              <li><a href="">Log Out</a></li>
             </ul>
           </div>
         </div>
