--- a/Frontend/my-app/src/rating.html
+++ b/Frontend/my-app/src/rating.html
@@ -20,6 +20,7 @@
         <li><a href="profilepage.html">Profile</a></li>
         <li><a href="historypage.html">History</a></li>
         <li><a href="mylistings.html">Postings</a></li>
+        <li><a href="">Log Out</a></li>
       </ul>
     </div>
   </div>
